5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1679_1107.log
== TEST (2019-05-01 12:50:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input())
futuro = int(input())
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 1:
    print(segunda)
elif diafuturo == 2:
    print(terca, end="")
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:50:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input())
futuro = int(input())
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 1:
    print(segunda)
elif diafuturo == 2:
    print(terca, end="")
-- EXECUTION TIME:
0.137584
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:52:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 1:
    print(segunda)
elif diafuturo == 2:
    print(terca, end="")
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:56:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 0:
    print(domingo, end="")
elif diafuturo == 1:
    print(segunda, end="" )
elif diafuturo == 2:
    print(terca, end="")
elif diafuturo == 3:
    print(quarta, end="")
elif diafuturo == 4:
   print(quinta, end="")
elif diafuturo == 5:
    print(sexta, end="")
elif diafuturo == 6:
    print(sabado, end="")
-- EXECUTION TIME:
0.099601
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh quinta
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:56:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 0:
    print(domingo, end="")
elif diafuturo == 1:
    print(segunda, end="" )
elif diafuturo == 2:
    print(terca, end="")
elif diafuturo == 3:
    print(quarta, end="")
elif diafuturo == 4:
   print(quinta, end="")
elif diafuturo == 5:
    print(sexta, end="")
elif diafuturo == 6:
    print(sabado, end="")
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:57:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 0:
    print(domingo, end="")
elif diafuturo == 1:
    print(segunda, end="" )
elif diafuturo == 2:
    print(terca, end="")
elif diafuturo == 3:
    print(quarta, end="")
elif diafuturo == 4:
   print(quinta, end="")
elif diafuturo == 5:
    print(sexta, end="")
elif diafuturo == 6:
    print(sabado, end="")
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh  e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:57:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
    print("A entrada", hoje, "eh invalida")
	break()


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 0:
    print(domingo, end="")
elif diafuturo == 1:
    print(segunda, end="" )
elif diafuturo == 2:
    print(terca, end="")
elif diafuturo == 3:
    print(quarta, end="")
elif diafuturo == 4:
   print(quinta, end="")
elif diafuturo == 5:
    print(sexta, end="")
elif diafuturo == 6:
    print(sabado, end="")
-- ERROR:
File "XXXX", line 19
    break()
          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:59:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje < 0 or hoje > 6:
	print("A entrada", hoje, "eh invalida")
	break


print("Hoje eh ", end="")
if hoje == 0:
    print(domingo, end="")
elif hoje == 1:
    print(segunda, end="")
elif hoje == 2:
    print(terca, end="")
elif hoje == 3:
    print(quarta, end="")
elif hoje == 4:
    print(quinta, end="")
elif hoje == 5:
    print(sexta, end="")
elif hoje == 6:
    print(sabado, end="")

if futuro > 7:
    diafuturo = (futuro + hoje) % 7
else:
    diafuturo = futuro

print(" e o dia futuro eh ", end="")

if diafuturo == 0:
    print(domingo, end="")
elif diafuturo == 1:
    print(segunda, end="" )
elif diafuturo == 2:
    print(terca, end="")
elif diafuturo == 3:
    print(quarta, end="")
elif diafuturo == 4:
   print(quinta, end="")
elif diafuturo == 5:
    print(sexta, end="")
elif diafuturo == 6:
    print(sabado, end="")
-- ERROR:
File "XXXX", line 19
    break
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:00:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 or hoje <= 6:
	
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- OUTPUT:
Hoje eh  e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:00:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 or hoje <= 6:
	
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.136533
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
Hoje eh  e o dia futuro eh quinta
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:00:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 or hoje <= 6:
	
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- OUTPUT:
Hoje eh  e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:01:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:01:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.14227
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:02:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje: " ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.156996
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Entre com o numero do dia de hoje: Entre como  numero de dias apos hoje: Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:02:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje:" ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.194329
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje: " ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.203299
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:03:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje: " ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- EXECUTION TIME:
0.175967
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:03:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = int(input("Entre com o numero do dia de hoje: "))
futuro = int(input("Entre como  numero de dias apos hoje: " ))
diafuturo = int()

domingo =  "domingo"
segunda = "segunda"
terca = "terca"
quarta = "quarta"
quinta = "quinta"
sexta = "sexta"
sabado = "sabado"


if hoje >= 0 and hoje <= 6:
	print("Hoje eh ", end="")
	if hoje == 0:
		 print(domingo, end="")
	elif hoje == 1:
		 print(segunda, end="")
	elif hoje == 2:
		 print(terca, end="")
	elif hoje == 3:
		 print(quarta, end="")
	elif hoje == 4:
		 print(quinta, end="")
	elif hoje == 5:
		 print(sexta, end="")
	elif hoje == 6:
		 print(sabado, end="")

	if futuro > 7:
		 diafuturo = (futuro + hoje) % 7
	else:
		 diafuturo = futuro

	print(" e o dia futuro eh ", end="")

	if diafuturo == 0:
		 print(domingo, end="")
	elif diafuturo == 1:
		 print(segunda, end="" )
	elif diafuturo == 2:
		 print(terca, end="")
	elif diafuturo == 3:
		 print(quarta, end="")
	elif diafuturo == 4:
		print(quinta, end="")
	elif diafuturo == 5:
		 print(sexta, end="")
	elif diafuturo == 6:
		 print(sabado, end="")
else:
	print("A entrada", hoje, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
